- fixed fucked up UI

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,8 +40,8 @@
         android:id="@+id/loginBtn"
         android:layout_below="@+id/passowrdTxt"
         android:layout_centerHorizontal="true"
-        android:layout_width="163dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:background="@drawable/appointments_button"
         android:backgroundTint="@color/colorAccent"
@@ -50,14 +50,11 @@
 
     <Button
         android:id="@+id/registerBtn"
-        android:layout_width="163dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/loginBtn"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="220dp"
-        android:layout_marginBottom="215dp"
         android:background="@drawable/appointments_button"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/register"
