--- a/app/src/main/res/layout/activity_employee_landing.xml
+++ b/app/src/main/res/layout/activity_employee_landing.xml
@@ -1,49 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     android:background="#74B3CE"
+    android:weightSum="16"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/appointmentsBtn"
-        android:layout_width="322dp"
-        android:layout_height="87dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/appointments_button"
-        android:drawableStart="@drawable/ic_web_black_24dp"
-        android:gravity="center"
-        android:text="@string/Appointments" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:layout_weight="15"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="65dp"
+            android:layout_marginLeft="45dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/appointmentsBtn"
+                android:background="@drawable/appointments_button"
+                android:drawableStart="@drawable/ic_web_black_24dp"
+                android:gravity="center"
+                android:text="@string/Appointments"
+                android:weightSum="2"
+                android:layout_height="87dp"
+                android:layout_width="322dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="85dp"
+            android:layout_marginLeft="45dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/clientsBtn"
+                android:background="@drawable/clients_button"
+                android:drawableStart="@drawable/ic_person_black_24dp"
+                android:text="@string/Profile"
+                android:layout_height="87dp"
+                android:layout_width="322dp"/>
+
+        </LinearLayout>
 
 
-    <Button
-        android:id="@+id/clientsBtn"
-        android:layout_below="@+id/appointmentsBtn"
-        android:layout_centerHorizontal="true"
-        android:layout_width="322dp"
-        android:layout_height="87dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/clients_button"
-        android:drawableStart="@drawable/ic_person_black_24dp"
-        android:gravity="center"
-        android:text="@string/Profile" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="85dp"
+            android:layout_marginLeft="45dp"
+            android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/settingsBtn"
-        android:layout_below="@+id/clientsBtn"
-        android:layout_centerHorizontal="true"
-        android:layout_width="322dp"
-        android:layout_height="87dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/settings_button"
-        android:drawableStart="@drawable/ic_build_black_24dp"
-        android:text="@string/Settings" />
+            <Button
+                android:id="@+id/settingsBtn"
+                android:background="@drawable/settings_button"
+                android:drawableStart="@drawable/ic_build_black_24dp"
+                android:text="@string/Settings"
+                android:layout_height="87dp"
+                android:layout_width="322dp"/>
 
-</RelativeLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
