--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,16 +25,16 @@
 
     <EditText
         android:id="@+id/passowrdTxt"
-        android:layout_below="@+id/usernameTxt"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/usernameTxt"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:autofillHints=""
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/passwordHint"
-        android:inputType="textPersonName" />
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/loginBtn"
